# PhemexBoy

./: .gitignore  LICENSE  Makefile  README.md  futureboy.py  phemexboy.py  pyproject.toml  spotboy.py  test.py
phemexboy/: __init__.py  client.py  exceptions.py  proxy.py
phemexboy/api/: auth.py  future.py  order.py  position.py  public.py  spot.py
phemexboy/api/auth/: client.py  order.py  position.py
phemexboy/helpers/: conversions.py
phemexboy/interfaces/: auth_interface.py  future_interface.py  order_interface.py  position_interface.py  public_interface.py  spot_interface.py
phemexboy/interfaces/auth/: client_interface.py  order_interface.py  position_interface.py
phemexboy/tests/: api_tests.py  auth_tests.py  client_tests.py  future_tests.py  order_tests.py  position_tests.py  proxy_tests.py  public_tests.py  spot_tests.py
