[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phemexboy"
authors = [{name = "Marques Traylor", email = "traylorboy@proton.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["ccxt", "botboy"]

[project.urls]
Home = "https://github.com/TraylorBoy/PhemexBoy"
